Fix dark mode color

--- a/src/globals.css
+++ b/src/globals.css
@@ -37,6 +37,10 @@
   text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
 }
 
+body {
+  background-color: var(--n10);
+}
+
 svg {
   display: block;
 }
